<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="9"
        android:hint="@string/CharacterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="9"
        android:hint="@string/Strength"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText" />
    <EditText
        android:id="@+id/editDex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/Dexterity"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editStr" />
    <EditText
        android:id="@+id/editCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/Constitution"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDex"
        />
    <EditText
        android:id="@+id/editWis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/Wisdom"
        android:inputType="number"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCon"/>
    <EditText
        android:id="@+id/editInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/Intelligence"
        android:inputType="number"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editWis"
        />
    <EditText
        android:id="@+id/editCha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/Charisma"
        android:inputType="number"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editInt"
        />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="onClick"
        android:text="@string/Store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCha" />
</androidx.constraintlayout.widget.ConstraintLayout>